--- a/assets/templates/index_template.html
+++ b/assets/templates/index_template.html
@@ -3,11 +3,14 @@
 </header>
 
 <div id="startInfo">
-  <h1>Videochat mit Deinen Freunden!</h1>
-  <br>
+  <h1>PHOVEC</h1>
+  <h2>Videochat mit Deinen Freunden!</h2>
+
   <p>
-    Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.
+    Einfach auf Start klicken und du bist in einem Chatraum,
+    in dem du deine Freunde einladen kannst.
   </p>
-  <input placeholder="Bitte wählen Sie einen Namen..." id="name"/>
 </div>
-<div id="startButtonImage" title="Wird erst aktive wenn ein Name eingegeben wurde"></div>
+
+<input placeholder="Dein Name..." id="startName" autofocus="autofocus"/>
+<div id="startButtonImage" title="Bitte gib zuerst Deinen Namen ein"></div>
