--- a/assets/templates/room_template.html
+++ b/assets/templates/room_template.html
@@ -23,7 +23,9 @@
 <div id="glow"></div>
 <div id="nameArea">
   <div>
-    <input placeholder="Bitte geben Sie Ihren Name ein..." id="name"/>
+    <h2>Willkommen auf PHOVEC!</h2>
+    Du wurdest von einem Freund zu einer Chat- und Video-Konferenz eingeladen
+    <input placeholder="Dein Name..." id="startName"/>
     <div id="startButtonImage"></div>
   </div>
 </div>
