--- a/assets/css/startpage.css
+++ b/assets/css/startpage.css
@@ -2,20 +2,42 @@
   max-width: 700px;
   min-width: 350px;
   margin: 50px auto;
-  font-size:32px;
-  text-align:center;
+  font-size: 32px;
+  text-align: center;
+}
+#startInfo h1 {
+  font-size: 72px;
+  font-family: 'Finger Paint';
+}
+
+#startInfo h2 {
+  font-family: 'Finger Paint';
+}
+
+#startInfo p {
+  margin: 25px 0px;
+  max-width: 550px;
+  margin: 25px auto;
 }
 
 #startButtonImage {
-	height: 100px;
-	width: 350px;
-	min-width: 350px;
-	margin: 0 auto;
-	background-image: url('../img/startbtn_sprite.png');
-	background-repeat: no-repeat;
+  height: 100px;
+  width: 350px;
+  min-width: 350px;
+  margin: 0 auto;
+  background-image: url('../img/startbtn_sprite.png');
+  background-repeat: no-repeat;
 }
 
-#infoButton:hover, #backButton:hover{
-	opacity: 0.8;
+#startName {
+  display: block;
+  width: 250px;
+  height: 30px;
+  margin: 10px auto;
+  font-size: 24px;
+}
+
+#infoButton:hover {
+  opacity: 0.8;
 }
 
