added titles for tooltips

--- a/assets/templates/index_template.html
+++ b/assets/templates/index_template.html
@@ -13,4 +13,4 @@
 </div>
 
 <input placeholder="Dein Name..." id="startName" autofocus="autofocus"/>
-<div id="startButtonImage" title="Bitte gib zuerst Deinen Namen ein"></div>
+<div id="startButtonImage" title="Bitte gib zuerst Deinen Namen ein" title="öffnet einen Chatraum"></div>
