--- a/assets/templates/_localUser_template.html
+++ b/assets/templates/_localUser_template.html
@@ -7,7 +7,7 @@
   <div class="recordLocalVideo" title="Video aufnehmen"></div>
   <div class="recordLocalAudio" title="Audio aufnehmen"></div>
   <img class='defaultAvatar' src="assets/img/avatar.jpg"/>
-  <video autoplay muted></video>
+  <video autoplay></video>
   <audio autoplay loop muted></audio>
   <canvas id="faceDetectorOutput"></canvas>
   <canvas id="audioVisualizer"></canvas>
