--- a/assets/templates/_auth_template.html
+++ b/assets/templates/_auth_template.html
@@ -50,7 +50,8 @@
   <div id="friends_of_email">
     <form id="mail_form" style="display: inline-block;">
       {{view Ember.TextField valueBinding="App.Controller.auth.emailAddress" class="email_input" id="mailAddress" placeholder="Adresse" }}
-      {{view Ember.TextArea valueBinding="App.Controller.auth.emailDesc" class="email_input" id="mailDescription" placeholder="Beschreibung" }}
+      {{view Ember.TextArea valueBinding="App.Controller.auth.emailDesc" class="email_input" id="mailDescription" placeholder="Beschreibung" maxlength="160" }}
+      <p style="float: right;margin-right: 10%;margin-top: -3%;margin-bottom: 5%;">{{App.Controller.auth.emailDesc.length}}/160</p>
       <input type="button" id="mailFormButton" value="Sende E-Mail" {{action "addMailInfo" target="App.Controller.auth"}} />
     </form>
     <h1 class="sidebar_info">INFO</h1>
