only one file can now be submitted for transfer at each sides

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -430,7 +430,11 @@
   width: 100%;
   position: relative;
   text-align: left;
-  display: none;
+  display:none;
+}
+
+#videoboxes .userHead form {
+  display:block !important;
 }
 
 .user .connectionInfo {
