--- a/assets/templates/room_template.html
+++ b/assets/templates/room_template.html
@@ -40,6 +40,9 @@
     </div>
     <div id="help_content">
       <h1 style="text-align: center;">Hilfe anleitung</h1>
+      <video id="screencast" width="640" height="480" controls>
+        <source src="assets/img/help/phovec_screencast.webm" type='video/webm; codecs="vp8, vorbis"'/>
+      </video>
       <p>
         Hi!
       </p>
